tests/e2e/not_allowed/not.error
Error: syntax error in story at line 1, column 5

1|    not = 1
          ^

E0041: `=` is not allowed here
